# h.core-Messaging

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
lib/: CMakeLists.txt  build.gradle
lib/src/androidTest/assets/: ping-pong.js
lib/src/androidTest/java/eu/h2020/helios_social/core/messaging/: ExampleInstrumentedTest.java
lib/src/main/: AndroidManifest.xml
lib/src/main/assets/: NODE_MODULE_LICENSES
lib/src/main/cpp/: jni_node_bridge.cpp  jni_streamr_bridge.cpp  node_fd_pass.cpp  node_fd_pass.h  stdio_redirect.cpp  stdio_redirect.h
lib/src/main/java/eu/h2020/helios_social/core/messaging/: HeliosConnect.java  HeliosConnectionInfo.java  HeliosDirectMessaging.kt  HeliosEgoTag.kt  HeliosIdentityInfo.java  HeliosMessage.java  HeliosMessageLibp2pPubSub.kt  HeliosMessageListener.java  HeliosMessaging.java  HeliosMessagingException.java  HeliosMessagingReceiver.kt  HeliosNetworkAddress.kt  HeliosStorageHelper.java  HeliosTopic.java  HeliosTopicMatch.java  HeliosTopicMessageContainer.java  MessagingConstants.java  P2pPeerInfoMessage.kt  P2pPubSubMessage.kt  ReliableHeliosMessagingNodejsLibp2pImpl.java
lib/src/main/jniLibs/nodejs-mobile/include/node/: config.gypi  v8config.h
lib/src/main/js/: package-lock.json  package.json
lib/src/main/js/lib/: api-controller.js  cli-client.js  in-out-stream.js  p2p-client.js  p2p-node.js  pipe.js  streamr-mobile-client.js  test-client.js
lib/src/main/res/values/: strings.xml
lib/src/test/java/eu/h2020/helios_social/core/messaging/: ExampleUnitTest.java  HeliosConversationListTest.java  (+1 more)
(+71 files in other folders)
